--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,14 @@ google-auth==2.17.3
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==1.0.0
 googleapis-common-protos==1.59.0
+gunicorn==21.2.0
 httplib2==0.22.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 oauthlib==3.2.2
+packaging==23.2
 protobuf==4.22.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
